--- a/src/app/company/payments/payment/payment.component.html
+++ b/src/app/company/payments/payment/payment.component.html
@@ -10,7 +10,7 @@
             </p>
         </div>
         <div class="d-flex pr-flexer">
-            <div class="c-flex plan-1">
+            <div class="c-flex plan-1 plan-active">
               <span class="info-1">Starter</span>
               <h4 class="prce"><sup>$</sup>50</h4>
               <span>12000 chats/year</span>
