--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -319,12 +319,12 @@ footer .logo { width: 160px; }
 /*---------------------------------------------------------------------
 11 Pricing
 -----------------------------------------------------------------------*/
-.pricing-box { background: #ffffff; padding-bottom: 30px; border: 1px solid #e2e2e2; border-right: none; }
+.pricing-box { background: #ffffff; padding-bottom:15px; border-right: none; }
 .pricing-box .price { color: #ffffff; display: inline-block; width: 100%; }
 .pricing-box .price .currency { font-size: 32px; font-weight: bold; display: inline-block; vertical-align: baseline; margin-right: 5px; }
 .pricing-box .price strong { display: inline-block; font-size: 36px; font-weight: bold; margin-top: 20px; }
 .pricing-box .price .month { font-size: 14px; font-weight: bold; }
-.pricing-box .listing ul li { padding: 10px 0; margin: 0; list-style-type: none; font-family: 'Open Sans', sans-serif; font-weight: 600;    color: #666666; }
+.pricing-box .listing ul li { padding: 2px 15px; margin: 0; list-style-type: none; font-family: 'Open Sans', sans-serif; font-weight: 600;    color: #666666; }
 .pricing-box .listing ul li i { font-size: 20px; margin-left: 10px; }
 .pricing-box .price-blog { background: #7d4ac7; background: -moz-linear-gradient(left, #7d4ac7 0%, #a733bb 100%); background: -webkit-linear-gradient(left, #7d4ac7 0%, #a733bb 100%); background: linear-gradient(to right, #7d4ac7 0%, #a733bb 100%); filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7d4ac7', endColorstr='#a733bb', GradientType=1); position: relative; }
 .pricing-box .price-blog:before { content: ""; width: 0; height: 0; border-left: 10px solid transparent; border-right: 10px solid transparent; border-top: 15px solid #ffffff; position: absolute; z-index: 9; top: 0; left: 50%; margin-left: -10px; }
@@ -333,7 +333,7 @@ footer .logo { width: 160px; }
 .pricing-box .price-head { font-size: 18px; font-weight: 600; color: #222222; }
 .iq-pricing .row.no-gutters .col-lg-4.col-sm-12:last-child { border-right: 1px solid #e2e2e2; }
 .time-of-year { font-size: 14px; position: relative; text-align: center; width: 200px; -webkit-transform: translateZ(0);  -webkit-font-smoothing: antialiased;}
-.time-of-year .tooltip { background: #ffffff; color: #222222; border: 1px solid #d1d1d1; border-radius: 3px; bottom: 35px; font-size: 14px; display: block; left: 50%; opacity: 0; padding: 15px; pointer-events: none; position: absolute; width: 320px; z-index: 1102; -webkit-transform: translateY(10px); -moz-transform: translateY(10px); -ms-transform: translateY(10px); -o-transform: translateY(10px); transform: translateY(10px); -webkit-transition: all .7s ease-out; -moz-transition: all .7s ease-out; -ms-transition: all .7s ease-out; -o-transition: all .7s ease-out; transition: all .7s ease-out; margin-left: -160px; }
+.time-of-year .tooltip { background: #ffffff; color: #222222; border: 1px solid #d1d1d1; border-radius: 3px; bottom: 35px; font-size: 14px; display: block; left: 108px; opacity: 0; padding: 15px; pointer-events: none; position: absolute; width: 320px; z-index: 1102; -webkit-transform: translateY(10px); -moz-transform: translateY(10px); -ms-transform: translateY(10px); -o-transform: translateY(10px); transform: translateY(10px); -webkit-transition: all .7s ease-out; -moz-transition: all .7s ease-out; -ms-transition: all .7s ease-out; -o-transition: all .7s ease-out; transition: all .7s ease-out; margin-left: -160px; }
 .time-of-year .tooltip:before { bottom: -22px; content: " "; display: block; height: 20px; left: 50%; position: absolute; border-color: #a9a9a9 transparent transparent transparent; border-style: solid; border-width: 11px; margin-left: -14px; }
 .time-of-year .tooltip:after { border-left: solid transparent 10px; border-right: solid transparent 10px; border-top: solid #ffffe0 10px; bottom: -10px; content: " "; height: 0; left: 50%; margin-left: -13px; position: absolute; width: 0; }
 .time-of-year:hover .tooltip { opacity: 1; pointer-events: auto; -webkit-transform: translateY(0px); -moz-transform: translateY(0px); -ms-transform: translateY(0px); -o-transform: translateY(0px); transform: translateY(0px); color: #222222; }
