--- a/src/app/agent/layout/sidebar/sidebar.component.css
+++ b/src/app/agent/layout/sidebar/sidebar.component.css
@@ -3,8 +3,8 @@
     height: 100%;
     float: left;
     padding: 10px;
+    background-color:#162137;
 }
-
 .agent-name{
     display: flex;
     justify-content: center;
@@ -20,7 +20,7 @@
     padding: 0px;
     outline: none;
     border: none;
-    color: black;
+    color: #fff;
 }
 
 .edit-header-button{
@@ -99,4 +99,87 @@
     align-items: flex-end;
     justify-content: center;
     width: 230px;
+}
+.notification-button{
+    border-radius: 100%;
+}
+.notification-button:enabled:hover,
+ .notification-button:enabled:ative,
+ .notification-button:enabled:focus{
+    background: #800080;
+    color: #ffffff;
+    border-color: #9c27b0;
+    border-radius: 100%;
+    box-shadow: none;
+    outline: none;
+}
+.menu-item-link svg{
+    fill:lightslategray;
+    width: 20px;
+    height: 20px;
+    float: right;
+    margin-top: 8px;
+    margin-right: 14px!important;
+}
+.menu-item-link.menu-active svg{
+  fill:#fff;
+    width: 20px;
+    height: 20px;
+    float: right;
+    margin-top: 8px;
+    margin-right: 14px!important;
+}
+.button-cstm{
+   background: transparent;
+    border: transparent;
+    font-size: 12px;
+    padding: 5px 15px;
+    height: initial;
+    line-height: initial;
+    box-shadow: none;
+
+}
+.button-cstm:hover,
+.button-cstm:ative,
+.button-cstm:focus{
+   background: transparent;
+    border: transparent;
+    font-size: 12px;
+    padding: 5px 15px;
+    height: initial;
+    line-height: initial;
+border-color:purple;
+box-shadow: none;
+}
+.p-button:enabled:hover,
+.p-button:enabled:active,
+.p-button:enabled:focus {
+    background:transparent;
+    color: #ffffff;
+    border-color:transparent;
+    box-shadow: none;
+}
+
+.p-dialog{
+    min-width: 500px;
+}
+.agent-vinod{
+        color: #fff!important;
+    display: block;
+    font-size: 16px;
+}
+#top-header{
+    position: relative;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+#top-header button{
+    position: absolute;
+    right: 0;
+    top:5px;
+    z-index: 1;
+}
+#top-header button.btn-2{
+    right: 32px!important;
 }
