--- a/src/app/agent/layout/chat-list/chat-list.component.css
+++ b/src/app/agent/layout/chat-list/chat-list.component.css
@@ -1,6 +1,6 @@
 .chat-list-container{
     width: 300px;
-    background-color: rgb(235, 235, 235);
+    background-color:rgb(128 0 128 / 6%);
     height: 100%;
     overflow-y: scroll;
     scroll-behavior: smooth;
