--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -1,14 +1,16 @@
 <div class="agent-sidebar p-grid">
-    <div class="p-col-12 agent-name">
+    <div class="p-col-12 agent-name" id="img-agent">
         
-        <h3 class="p-col-9 p-md-9 header-info-container">
-            <p-avatar *ngIf="agentDetails === null" label="PT" shape="circle" styleClass="avatar-label"></p-avatar>
-            <p-avatar *ngIf="agentDetails !== null" [image]="baseUrl + agentDetails?.profile_pic?.substring(1)" shape="circle"></p-avatar>
-            &nbsp;{{agentDetails?.first_name}} {{agentDetails?.last_name}} 
-            &nbsp; <button class="notification-button" pButton icon="pi pi-bell"></button>
-            <br/>
-            <button pButton class="edit-header-button" (click)="openEditPopup()" label="Edit" ></button>
-        </h3>
+        <div class="" id="top-header">
+            <img src="https://cdn.iconscout.com/icon/free/png-256/avatar-370-456322.png">
+           <!--  <p-avatar *ngIf="agentDetails === null" label="PT" shape="circle" styleClass="avatar-label"></p-avatar>
+            <p-avatar *ngIf="agentDetails !== null" [image]="baseUrl + agentDetails?.profile_pic?.substring(1)" shape="circle"></p-avatar> -->
+           <span class="agent-vinod"> &nbsp;{{agentDetails?.first_name}} {{agentDetails?.last_name}}  &nbsp; </span>
+            <button class="notification-button btn-1" pButton icon="pi pi-bell"></button>
+            <button  class="notification-button btn-2" pButton icon="pi pi-pencil" (click)="openEditPopup()"></button>
+            
+            
+        </div>
     </div>
 
     <p-divider></p-divider>
@@ -19,22 +21,114 @@
         </div>
         <div class="menu-item">
             <a (click)="sendSelectedPage('live-chats')" routerlinkactive="router-link-exact-active"
-                class="menu-item-link" [ngClass]="{'menu-active':activeSection ==='live-chats'}"> <svg
+                class="menu-item-link" [ngClass]="{'menu-active':activeSection ==='live-chats'}"> 
+
+
+               <!--  <svg
                     xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                     class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-                </svg>Live Chats
+                </svg>
+ -->Live Chats
+
+<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 60 60" style="enable-background:new 0 0 60 60;" xml:space="preserve">
+<path d="M54,2H6C2.748,2,0,4.748,0,8v33c0,3.252,2.748,6,6,6h28.558l9.702,10.673C44.453,57.885,44.724,58,45,58
+    c0.121,0,0.243-0.022,0.36-0.067C45.746,57.784,46,57.413,46,57V47h8c3.252,0,6-2.748,6-6V8C60,4.748,57.252,2,54,2z M12,15h15
+    c0.553,0,1,0.448,1,1s-0.447,1-1,1H12c-0.553,0-1-0.448-1-1S11.447,15,12,15z M46,33H12c-0.553,0-1-0.448-1-1s0.447-1,1-1h34
+    c0.553,0,1,0.448,1,1S46.553,33,46,33z M46,25H12c-0.553,0-1-0.448-1-1s0.447-1,1-1h34c0.553,0,1,0.448,1,1S46.553,25,46,25z"/>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
+
+
+
+
+
                 <!-- <p-badge [value]="'2'"></p-badge> -->
             </a>
 
             <a (click)="sendSelectedPage('incoming-chats')" routerlinkactive="router-link-exact-active"
-                [ngClass]="{'menu-active':activeSection ==='incoming-chats'}" class="menu-item-link"><svg
+                [ngClass]="{'menu-active':activeSection ==='incoming-chats'}" class="menu-item-link"><!-- <svg
                     xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
                     class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-                </svg>Incoming Chats
+                </svg> -->Incoming Chats
+
+<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 297 297" style="enable-background:new 0 0 297 297;" xml:space="preserve">
+<g>
+    <path d="M206.093,181.516c17.379,0,31.515-14.138,31.515-31.515V54.593c0-17.378-14.136-31.518-31.515-31.518H31.51
+        C14.135,23.075,0,37.215,0,54.593v95.408c0,17.377,14.135,31.515,31.51,31.515h22.933v32.988c0,4.012,2.416,7.627,6.121,9.162
+        c1.228,0.507,2.516,0.753,3.792,0.753c2.58,0,5.117-1.007,7.014-2.904l39.991-39.999H206.093z"/>
+    <path d="M269.415,105.583h-15.944v44.418c0,26.125-21.253,47.378-47.378,47.378h-88.161l-18.537,18.542
+        c2.234,12.987,13.567,22.902,27.181,22.902h76.762l32.191,32.196c1.896,1.897,4.434,2.905,7.014,2.905
+        c1.276,0,2.564-0.249,3.792-0.756c3.705-1.535,6.12-5.149,6.12-9.16v-25.186h16.961c15.211,0,27.585-12.378,27.585-27.591v-78.061
+        C297,117.959,284.626,105.583,269.415,105.583z"/>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
+
+
                 <!-- <p-badge [value]="'2'"></p-badge> -->
             </a>
         </div>
@@ -43,13 +137,55 @@
         </div>
         <div class="menu-item">
             <a (click)="sendSelectedPage('resolved-chats')" routerlinkactive="router-link-exact-active"
-                [ngClass]="{'menu-active':activeSection ==='resolved-chats'}" class="menu-item-link"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor"
-                    class="bi bi-check-circle" viewBox="0 0 16 16">
-                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-                    <path
-                        d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z" />
-                </svg>Chat History
+                [ngClass]="{'menu-active':activeSection ==='resolved-chats'}" class="menu-item-link">
+
+               
+<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     viewBox="0 0 219.15 219.15" style="enable-background:new 0 0 219.15 219.15;" xml:space="preserve">
+<g>
+    <path d="M109.575,0C49.156,0,0.001,49.155,0.001,109.574c0,60.42,49.154,109.576,109.573,109.576
+        c60.42,0,109.574-49.156,109.574-109.576C219.149,49.155,169.995,0,109.575,0z M109.575,204.15
+        c-52.148,0-94.573-42.427-94.573-94.576C15.001,57.426,57.427,15,109.575,15c52.148,0,94.574,42.426,94.574,94.574
+        C204.149,161.724,161.723,204.15,109.575,204.15z"/>
+    <path d="M166.112,108.111h-52.051V51.249c0-4.142-3.357-7.5-7.5-7.5c-4.142,0-7.5,3.358-7.5,7.5v64.362c0,4.142,3.358,7.5,7.5,7.5
+        h59.551c4.143,0,7.5-3.358,7.5-7.5C173.612,111.469,170.254,108.111,166.112,108.111z"/>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+<g>
+</g>
+</svg>
+
+
+
+
+                Chat History
                 <!-- <p-badge [value]="'2'"></p-badge> -->
             </a>
             <!-- <a  (click)="sendSelectedPage('unresolved-chats')" routerlinkactive="router-link-exact-active" [ngClass]="{'menu-active':activeSection ==='unresolved-chats'}" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
