--- a/src/app/company/domain/domain.component.html
+++ b/src/app/company/domain/domain.component.html
@@ -7,35 +7,30 @@
         <div class="row">
           <div class="col-md-1"></div>
           <div class="col-md-7">
-            <p
-              class="btn btn-secondary btn-style"
-              [routerLink]="['/company/domain/create']"
-              [routerLinkActive]="'active'"
-            >
+            <p class="btn btn-secondary btn-style" [routerLink]="['/company/domain/create']"
+              [routerLinkActive]="'active'">
               <span class="fa fa-plus btn-padding"></span>Create Domain
             </p>
 
-            <p
-              [routerLink]="['/company/intents']"
-              [routerLinkActive]="'active'"
-              class="btn btn-secondary btn-style"
-              style="margin-left: 20px"
-            >
+            <p [routerLink]="['/company/intents']" [routerLinkActive]="'active'" class="btn btn-secondary btn-style"
+              style="margin-left: 20px">
               <span class="fa fa-eye btn-padding"></span>View Intents
             </p>
           </div>
         </div>
 
         <!-- Table -->
-        <app-generic-table [cols]="cols" [data]="domainsList" component="domain" [showDelete]="true" [showEdit]="true"></app-generic-table>
-        <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>
-        <app-generic-edit-modal header="Update Domain" [data]="updatePayload" component="domain" >
+        <app-generic-table [cols]="cols" [data]="domainsList" component="domain" [showDelete]="true" [showEdit]="true">
+        </app-generic-table>
+        <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle">
+        </p-confirmDialog>
+        <app-generic-edit-modal header="Update Domain" [data]="updatePayload" component="domain">
           <span style="margin-top: 20px;" class="p-float-label">
-            <input id="float-input" type="text" [value]="selectedRow.domain" pInputText readonly> 
+            <input id="float-input" type="text" [value]="selectedRow.domain" pInputText readonly>
             <label for="float-input">Old Domain Name</label>
           </span>
           <span style="margin-top: 20px;" class="p-float-label">
-            <input id="float-input" [formControl]="newDomainName" type="text" pInputText> 
+            <input id="float-input" [formControl]="newDomainName" type="text" pInputText>
             <label for="float-input">New Domain Name</label>
           </span>
         </app-generic-edit-modal>
