--- a/src/app/company/generic-edit-modal/generic-edit-modal.component.html
+++ b/src/app/company/generic-edit-modal/generic-edit-modal.component.html
@@ -1,10 +1,16 @@
+
+
+
 <p-dialog [(visible)]="display" [draggable]="false" position="top" >
     <ng-template pTemplate="header">
         {{header}}
     </ng-template>
     <ng-content></ng-content>
     <ng-template pTemplate="footer">
-        <button (click)="closeDisplay()" icon="pi pi-times" type="button" class="p-button-sm p-button-help" pButton>Close&nbsp;</button>
+    	<div  class="text-center" id="cstm-div">
+    		 <button (click)="closeDisplay()" icon="pi pi-times" type="button" class="p-button-sm p-button-help" pButton>Close&nbsp;</button>
         <button (click)="submitUpdate()" icon="pi pi-check" class="p-button-sm p-button-help" type="button" pButton>Submit&nbsp;</button>
+    	</div>
+       
     </ng-template>
 </p-dialog>
