--- a/src/app/company/add-domain/add-domain.component.html
+++ b/src/app/company/add-domain/add-domain.component.html
@@ -1,3 +1,4 @@
+<br>
 <div class="row">
   <div class="col-md-11">
     <div class="card">
@@ -16,11 +17,11 @@
           />
 
           <div class="input-group-append">
-          <button
+          <button 
             [disabled]="domainName.invalid"
             (click)="createDomain()"
             type="button"
-            class="btn btn-success"
+            class="btn btn-theme"
           >
             Submit
           </button>
