--- a/src/app/company/intents/create/create.component.html
+++ b/src/app/company/intents/create/create.component.html
@@ -1,24 +1,33 @@
+<br>
 <div class="row">
   <div class="col-md-11">
     <div class="card">
       <div class="card-body">
-        <div class="card-title">
-          Create Intents<br />
-          <small id="title-small-text">
-            Intents are grouped user sayings with a similar purpose. For example
-            a user may say, "I want to order a cheese pizza and that may be
-            labeled with an intent of Order Pizza
-          </small>
-          <br/>
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-            Help
-          </button>
+        <div class="row">
+            <div class="col-md-10">
+               <div class="card-title">
+                  Create Intents
+                </div>
+            </div>
+            <div class="col-md-2 text-right">
+                <button type="button" class="btn btn-theme" data-toggle="modal" data-target="#exampleModal">
+                Help
+              </button>
+            </div>
+            <div class="col-md-12">
+                <small id="title-small-text">
+                  Intents are grouped user sayings with a similar purpose. For example
+                  a user may say, "I want to order a cheese pizza and that may be
+                  labeled with an intent of Order Pizza
+                </small>
+            </div>
         </div>
+       
 
         <!-- Form -->
         <div class="row">
           <!-- Intent Name -->
-          <div class="col-xs-12 col-md-12 col-lg-12">
+          <div class="col-md-6">
             <div class="form-group">
               <label for="exampleInputEmail1">Intent Name</label>
               <input
@@ -36,7 +45,7 @@
           </div>
 
           <!-- User Messages List -->
-          <div class="col-xs-12 col-md-12 col-lg-6">
+          <div class=" col-md-6">
             <div class="form-group">
               <label for="exampleInputEmail1">User Message</label>
               <div class="input-group">
@@ -49,7 +58,7 @@
                   [formControl]="userMessage"
                 />
                 <div class="input-group-append">
-                  <button (click)="addMessage()" [disabled] ="userMessage.invalid" class="btn btn-success" type="button">
+                  <button (click)="addMessage()" [disabled] ="userMessage.invalid" class="btn btn-theme" type="button">
                     Add
                   </button>
                 </div>
@@ -62,7 +71,7 @@
             </div>
           </div>
           <!-- List -->
-          <div class="col-xs-12 col-md-12 col-lg-6">
+          <div class="col-md-6">
             <div class="form-group">
               <label for="message-input">Added User Messages</label>
               <div id="quicklinks-list">
@@ -78,7 +87,6 @@
                         d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
                       <path fill-rule="evenodd"
                         d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
-                      `
                     </svg>
                   </div>
                 </div>
@@ -87,17 +95,18 @@
           </div>
 
           <!-- Related Domain -->
-          <div class="col-xs-12 col-md-12 col-lg-12">
+          <div class="col-md-6">
             <div class="form-group">
               <label>Select Related Domain</label>
-              <select [formControl]="selectedDomain" class="custom-select" size="3">
+              <select [formControl]="selectedDomain" class="custom-select" >
+                <option disabled="" readonly="" selected="">Select</option>
                 <option *ngFor="let domainsVar of domainsList" [ngValue]="domainsVar.domain">{{domainsVar.domain}}</option>
               </select>
             </div>
           </div>
 
           <!-- Response to User List -->
-          <div class="col-xs-12 col-md-12 col-lg-6">
+          <div class="col-md-12">
             <div class="form-group">
               <label for="exampleInputEmail1">Response to User</label>
               <div class="input-group">
@@ -110,7 +119,7 @@
                   [formControl]="responseMessage"
                 />
                 <div class="input-group-append">
-                  <button (click)="addResponseMessage()" [disabled] ="responseMessage.invalid" class="btn btn-success" type="button">
+                  <button (click)="addResponseMessage()" [disabled] ="responseMessage.invalid" class="btn btn-theme" type="button">
                     Add
                   </button>
                 </div>
@@ -122,7 +131,7 @@
             </div>
           </div>
           <!-- List -->
-          <div class="col-xs-12 col-md-12 col-lg-6">
+          <div class="col-md-12">
             <div class="form-group">
               <label for="message-input">Added Response Messages</label>
               <div id="quicklinks-list">
@@ -148,7 +157,7 @@
 
           <div class="col-xs-4 col-md-3 col-lg-2">
             <div class="form-group">
-              <button (click)="submitForm()" type="button" class="btn btn-success">Submit</button>
+              <button (click)="submitForm()" type="button" class="btn btn-theme">Submit</button>
             </div>
           </div>
           
