--- a/src/app/company/intents/list/list.component.html
+++ b/src/app/company/intents/list/list.component.html
@@ -1,13 +1,19 @@
-<div class="row">
+
+<div class="container-fluid vh-cstm">
+    <br><br>
+  <div class="row">
     <div class="col-md-11">
       <div class="card">
         <div class="card-body">
-          <div class="card-title">View Intents</div>
+          
           <!-- Form -->
           <div class="row">
-            <div class="col-md-1"></div>
             <div class="col-md-7">
-              <p
+              <div class="card-title">View Intents</div>
+            </div>
+            <div class="col-md-5">
+               <div class="text-right">
+                      <p
                 class="btn btn-secondary btn-style"
                 [routerLink]="['/company/intents/create']"
                 [routerLinkActive]="'active'"
@@ -22,18 +28,22 @@
               class="btn btn-secondary btn-style" style="margin-left: 20px">
                 <span class="fa fa-eye btn-padding"></span>View Entity
               </p>
+               </div>
+         
             </div>
           </div>
   
           <!-- Table -->
           <app-generic-table [cols]="cols" [data]="intentList" component="intents" [showDelete]="true" [showEdit]="true"></app-generic-table>
-          <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle"></p-confirmDialog>        
+          <p-confirmDialog header="Do you want to delete selected records?" icon="pi pi-exclamation-triangle">
+            
+          </p-confirmDialog>        
 
         </div>
       </div>
     </div>
   </div>
-
+</div>
 
     <!-- Update Popup -->
     <app-generic-edit-modal header="Update Intents" [data]="updatePayload" component="intents" >
